@@ -7,6 +7,7 @@
 - Migrate to Harmony 2.0
 - Add StartConnectionTransferImpl Transpiler by MacSergey
 - Implement Harmony reverse patches for ResidentAI private methods
+- Move mod initialisation from OnCreated to OnLoaded
 
 
 Version 1.3.7 -
